<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        app:cardCornerRadius="2dip"
        app:cardElevation="2dip">

        <LinearLayout
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/repost"
                style="@style/PopWindowTextStyle"
                android:text="@string/repost" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/share"
                style="@style/PopWindowTextStyle"
                android:text="@string/option_share" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/launch"
                style="@style/PopWindowTextStyle"
                android:text="@string/option_launch" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/copy"
                style="@style/PopWindowTextStyle"
                android:text="@string/option_copy" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_color" />
            <TextView
                android:id="@+id/delete"
                style="@style/PopWindowTextStyle"
                android:text="@string/menu_delete" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>